manifests/kafka-operator-0.26.0-dev.0.tgz-manifest.yaml
---
# Source: kafka-operator/templates/alertmanager-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "my-release-kafka-operator-alertmanager"
  namespace: "default"
  labels:
    control-plane: controller-manager
    controller-tools.k8s.io: "1.0"
    app.kubernetes.io/name: kafka-operator
    helm.sh/chart: kafka-operator-0.26.0-dev.0
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: v0.26.0-dev.0
    app.kubernetes.io/component: alertmanager
spec:
  selector:
    control-plane: controller-manager
    controller-tools.k8s.io: "1.0"
    app.kubernetes.io/name: kafka-operator
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/component: operator
  ports:
  - name: http-alerts
    port: 9001
---
# Source: kafka-operator/templates/authproxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-kafka-operator-authproxy
  namespace: "default"
  annotations:
    prometheus.io/port: "8443"
    prometheus.io/scheme: https
    prometheus.io/scrape: "true"
  labels:
    control-plane: controller-manager
    controller-tools.k8s.io: "1.0"
    app.kubernetes.io/name: kafka-operator
    helm.sh/chart: kafka-operator-0.26.0-dev.0
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: v0.26.0-dev.0
    app.kubernetes.io/component: authproxy
spec:
  ports:
  - name: https
    port: 8443
    targetPort: https
  selector:
    control-plane: controller-manager
    controller-tools.k8s.io: "1.0"
    app.kubernetes.io/name: kafka-operator
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/component: operator
---
# Source: kafka-operator/templates/operator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "my-release-kafka-operator-operator"
  namespace: "default"
  labels:
    control-plane: controller-manager
    controller-tools.k8s.io: "1.0"
    app.kubernetes.io/name: kafka-operator
    helm.sh/chart: kafka-operator-0.26.0-dev.0
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: v0.26.0-dev.0
    app.kubernetes.io/component: operator
spec:
  selector:
    control-plane: controller-manager
    controller-tools.k8s.io: "1.0"
    app.kubernetes.io/name: kafka-operator
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/component: operator
  ports:
  - name: https
    port: 443
    targetPort: webhook-server
---
# Source: kafka-operator/templates/operator-deployment-with-webhook.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "my-release-kafka-operator-operator"
  namespace: "default"
  labels:
    control-plane: controller-manager
    controller-tools.k8s.io: "1.0"
    app.kubernetes.io/name: kafka-operator
    helm.sh/chart: kafka-operator-0.26.0-dev.0
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: v0.26.0-dev.0
    app.kubernetes.io/component: operator
spec:
  selector:
    matchLabels:
      control-plane: controller-manager
      controller-tools.k8s.io: "1.0"
      app.kubernetes.io/name: kafka-operator
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/component: operator
  replicas: 1
  template:
    metadata:
      annotations:
        checksum/config: e56eab002c3f01875275cedaa8d246f90e0ec64c0b8583c6d874608d2c2201dc
      labels:
        control-plane: controller-manager
        controller-tools.k8s.io: "1.0"
        app.kubernetes.io/name: kafka-operator
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/component: operator
        app: prometheus
        component: alertmanager
    spec:
      serviceAccountName: kafka-operator
      volumes:
        - name: serving-cert
          secret:
            secretName: kafka-operator-serving-cert
      containers:
        - name: kube-rbac-proxy
          image: "gcr.io/kubebuilder/kube-rbac-proxy:v0.13.0"
          imagePullPolicy: IfNotPresent
          args:
            - "--secure-listen-address=0.0.0.0:8443"
            - "--upstream=http://127.0.0.1:8080/"
            - "--logtostderr=true"
            - "--v=10"
          ports:
            - containerPort: 8443
              name: https
        - command:
            - /manager
          args:
            - --enable-leader-election
            - --cert-manager-namespace=cert-manager
            - --cert-manager-enabled=false
          image: "ghcr.io/banzaicloud/kafka-operator:v0.26.0-dev.0"
          imagePullPolicy: IfNotPresent
          name: manager
          ports:
            - containerPort: 9443
              name: webhook-server
              protocol: TCP
            - containerPort: 8080
              name: metrics
              protocol: TCP
            - containerPort: 9001
              name: alerts
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/webhook/certs
              name: serving-cert
              readOnly: true
          resources:
          
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
      terminationGracePeriodSeconds: 10
---
# Source: kafka-operator/templates/operator-deployment-with-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    app.kubernetes.io/name: kafka-operator
    helm.sh/chart: kafka-operator-0.26.0-dev.0
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: v0.26.0-dev.0
    app.kubernetes.io/component: webhook
  name: kafka-operator-validating-webhook
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURJekNDQWd1Z0F3SUJBZ0lRSFNaeGhGdWQza3AxN2wzTTFzN01PakFOQmdrcWhraUc5dzBCQVFzRkFEQWMKTVJvd0dBWURWUVFERXhGcllXWnJZUzF2Y0dWeVlYUnZjaTFqWVRBZUZ3MHlOREEyTVRVeU16VXpNelZhRncwegpOREEyTVRNeU16VXpNelZhTUJ3eEdqQVlCZ05WQkFNVEVXdGhabXRoTFc5d1pYSmhkRzl5TFdOaE1JSUJJakFOCkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQXNTd2h6K3gzVlYzSHBRSlRONzBBaEYvaURuZU0KWmxIU1VkaGRiWmFaK1VrL3gwUkdLZ0xob2hWdGtRYU52YmhXVTh2YVBBUVBMLzluWTVJMnhYQUN5emc2TFNyaApwUldkSVAveThuYl [...]
    service:
      name: "my-release-kafka-operator-operator"
      namespace: default
      path: /validate-kafka-banzaicloud-io-v1alpha1-kafkatopic
  failurePolicy: Fail
  name: kafkatopics.kafka.banzaicloud.io
  rules:
  - apiGroups:
    - kafka.banzaicloud.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - kafkatopics
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURJekNDQWd1Z0F3SUJBZ0lRSFNaeGhGdWQza3AxN2wzTTFzN01PakFOQmdrcWhraUc5dzBCQVFzRkFEQWMKTVJvd0dBWURWUVFERXhGcllXWnJZUzF2Y0dWeVlYUnZjaTFqWVRBZUZ3MHlOREEyTVRVeU16VXpNelZhRncwegpOREEyTVRNeU16VXpNelZhTUJ3eEdqQVlCZ05WQkFNVEVXdGhabXRoTFc5d1pYSmhkRzl5TFdOaE1JSUJJakFOCkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQXNTd2h6K3gzVlYzSHBRSlRONzBBaEYvaURuZU0KWmxIU1VkaGRiWmFaK1VrL3gwUkdLZ0xob2hWdGtRYU52YmhXVTh2YVBBUVBMLzluWTVJMnhYQUN5emc2TFNyaApwUldkSVAveThuYl [...]
    service:
      name: "my-release-kafka-operator-operator"
      namespace: default
      path: /validate-kafka-banzaicloud-io-v1beta1-kafkacluster
  failurePolicy: Fail
  name: kafkaclusters.kafka.banzaicloud.io
  rules:
  - apiGroups:
    - kafka.banzaicloud.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - kafkaclusters
  sideEffects: None
